examples/kubeflow/mnist_with_tfjob/data-lineage-example2/kustomize/basic-auth/overlays/istio/kflogin-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basic-auth-login
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /kflogin
    rewrite:
      uri: /kflogin
    route:
    - destination:
        host: basic-auth-login.$(service-namespace).svc.$(clusterDomain)
        port:
          number: 8085
